--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,7 +1,7 @@
 site=stackoverflow
 min_score=223
 sort_users_by=reputation
-locations=Romania,Moldova,United States,Russia,France,Denmark,Canada,Italy,Pakistan,El Salvador
+locations=Romania,Moldova
 tags=java,C#,.net,docker
 page_size=100
 users_uri=https://api.stackexchange.com/2.2/users
